--- a/.gitignore
+++ b/.gitignore
@@ -263,5 +263,8 @@ OAuth.env
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
+application.yml
+dump.rdb
+/src/main/generated/
 #/src/main/resources/application.yml
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,gradle,intellij
